covid19 dashboard ie

--- a/_notebooks/2020-03-21-covid-19-ie.ipynb
+++ b/_notebooks/2020-03-21-covid-19-ie.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "- toc: true\n",
     "- branch: master\n",
-    "- badges: true\n",
+    "- badges: false\n",
     "- comments: false\n",
     "- author: vedax\n",
     "- categories: [libreai]"
@@ -17,10 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#hide\n",
     "import altair as alt\n",
     "import pandas as pd\n",
     "import numpy as np"
@@ -28,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cases = pd.read_csv('data/time_series_19-covid-Confirmed.csv')\n",
+    "#hide\n",
     "cases_ie = pd.read_csv('data/ie-covid19-ts.csv')\n",
     "cases_it = pd.read_csv('data/it-covid19-ts.csv')\n",
     "cases_es = pd.read_csv('data/es-covid19-ts.csv')"
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -131,18 +132,19 @@
        "21  2020-03-22      ie    906       4          5             18"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#hide_input\n",
     "cases_ie.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -193,30 +195,34 @@
        "16  2020-03-17      ie    292       2          5             13"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#hide\n",
     "cases_ie[cases_ie['date'] == '2020-03-17']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#hide\n",
     "# cases_ie.tail(), cases_it.tail(), cases_es.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#hide\n",
+    "\n",
     "new_cases_ie = np.diff(cases_ie['cases'])\n",
     "new_cases_ie = np.hstack((np.array([0]), new_cases_ie))\n",
     "\n",
@@ -229,10 +235,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#hide\n",
+    "\n",
     "population_in_m_ie=4.83\n",
     "population_in_m_it=60.48\n",
     "population_in_m_es=46.66"
@@ -240,10 +248,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#hide\n",
+    "\n",
     "source_ie = pd.DataFrame({\n",
     "    'country': 'Ireland',\n",
     "    'date': cases_ie['date'],\n",
@@ -279,17 +289,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-85597e4d12f84f0d9719b640730973fc\"></div>\n",
+       "<div id=\"altair-viz-81d25b65c0cd498a8d6f114931caea4c\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-85597e4d12f84f0d9719b640730973fc\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-81d25b65c0cd498a8d6f114931caea4c\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -337,12 +347,14 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#hide\n",
+    "\n",
     "cases_ie_plot = alt.Chart(source_ie).mark_circle(\n",
     "    color='green',\n",
     "    opacity=0.7).encode(\n",
@@ -358,17 +370,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-8e31abe7dbdc4e92be3b481033932ccb\"></div>\n",
+       "<div id=\"altair-viz-f39d684bac0a462fab104fa0dd11d6f2\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-8e31abe7dbdc4e92be3b481033932ccb\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-f39d684bac0a462fab104fa0dd11d6f2\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -416,12 +428,14 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#hide\n",
+    "\n",
     "cases_it_plot = alt.Chart(source_it).mark_line(\n",
     "    color='blue',\n",
     "    opacity=0.5,\n",
@@ -444,17 +458,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-a4cb3f9ffede43918b610c11e7a1a440\"></div>\n",
+       "<div id=\"altair-viz-ed2a6248e1e242a797939b0465bf99d3\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-a4cb3f9ffede43918b610c11e7a1a440\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-ed2a6248e1e242a797939b0465bf99d3\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -502,12 +516,14 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#hide\n",
+    "\n",
     "cases_es_plot = alt.Chart(source_es).mark_line(\n",
     "    color='red',\n",
     "    opacity=0.5,\n",
@@ -528,17 +544,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-3d960546307a47e287fea64d40fce95a\"></div>\n",
+       "<div id=\"altair-viz-6ad91f697351454d8d73d098dbfe3611\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-3d960546307a47e287fea64d40fce95a\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-6ad91f697351454d8d73d098dbfe3611\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -586,12 +602,14 @@
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#hide_input\n",
+    "\n",
     "alt.layer(cases_it_plot, cases_es_plot, cases_ie_plot).properties(\n",
     "    width=800, height=600\n",
     ").resolve_scale(\n",
@@ -609,17 +627,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-3949b21103dc43d6b94e55f9c6d81bad\"></div>\n",
+       "<div id=\"altair-viz-5ea06ea28ab740dbb696d0eae2347767\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-3949b21103dc43d6b94e55f9c6d81bad\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-5ea06ea28ab740dbb696d0eae2347767\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -667,12 +685,14 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#hide\n",
+    "\n",
     "cases_per_million_ie_plot = alt.Chart(source_ie).mark_circle(\n",
     "    color='green',\n",
     "    opacity=0.7).encode(\n",
@@ -688,17 +708,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-4ee47b8c027a471285376292fe0650d6\"></div>\n",
+       "<div id=\"altair-viz-a4734f3a90e04763ad83e06c95f6c6f0\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-4ee47b8c027a471285376292fe0650d6\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-a4734f3a90e04763ad83e06c95f6c6f0\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -746,12 +766,14 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#hide\n",
+    "\n",
     "cases_per_million_it_plot = alt.Chart(source_it).mark_line(\n",
     "    color='blue',\n",
     "    opacity=0.5,\n",
@@ -772,17 +794,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-715c8d920dc6468cb895e32ba4103c16\"></div>\n",
+       "<div id=\"altair-viz-c7b6e92d864e4768accc5e7d80920420\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-715c8d920dc6468cb895e32ba4103c16\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-c7b6e92d864e4768accc5e7d80920420\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -830,12 +852,14 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#hide\n",
+    "\n",
     "cases_per_million_es_plot = alt.Chart(source_es).mark_line(\n",
     "    color='red',\n",
     "    opacity=0.5,\n",
@@ -856,17 +880,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-83f13c08be8f48de8391729b0539e772\"></div>\n",
+       "<div id=\"altair-viz-a95b66e650a04493888d9322c2c3c696\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-83f13c08be8f48de8391729b0539e772\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-a95b66e650a04493888d9322c2c3c696\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -914,12 +938,14 @@
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#hide_input\n",
+    "\n",
     "alt.layer(cases_per_million_ie_plot, cases_per_million_it_plot, cases_per_million_es_plot).properties(\n",
     "    width=800, height=600\n",
     ").resolve_scale(\n",
