covid19 dashboard ie

--- a/_notebooks/2020-03-21-covid-19-ie.ipynb
+++ b/_notebooks/2020-03-21-covid-19-ie.ipynb
@@ -11,7 +11,7 @@
     "- branch: master\n",
     "- badges: false\n",
     "- comments: false\n",
-    "- author: vedax\n",
+    "- author: \"Libre AI\"\n",
     "- categories: [libreai]"
    ]
   },
@@ -138,7 +138,7 @@
     }
    ],
    "source": [
-    "#hide_input\n",
+    "#hide\n",
     "cases_ie.tail()"
    ]
   },
@@ -240,10 +240,10 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "\n",
-    "population_in_m_ie=4.83\n",
-    "population_in_m_it=60.48\n",
-    "population_in_m_es=46.66"
+    "#figures from https://en.wikipedia.org/wiki/List_of_countries_and_dependencies_by_population\n",
+    "population_in_m_ie=4.9\n",
+    "population_in_m_it=60.2\n",
+    "population_in_m_es=47.1"
    ]
   },
   {
@@ -543,6 +543,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Number of persons tested positive for Covid-19 in Ireland\n",
+    "The figure below shows the total number of persons who tested positive for Covid-19 (_cases_) in Ireland, Italy, and Spain. The `x` axis corresponds to the number of days since at least 10 cases were detected. This allow us to compare Ireland's current situation to the observed in Italy and Spain earlier. The comparison using Italy and Spain is because those countries are still in a critical situation fighting the pandemia, and no country would like to be the next one in such situation. \n",
+    "\n",
+    "For Ireland, the size of the circles for each day denotes the number of new persons confirmed infected that day.\n",
+    "\n",
+    "If we consider only the absolute numbers, we can see that the confirmed cases for Covid-19 in Ireland are below the ones observed in Italy and Spain at early stages. However, the populations of the three countries are very different and we have to account for that as well."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
@@ -622,7 +634,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---"
+    "# Number of Covid-19 cases per 1M population\n",
+    "The pupulation of Ireland, Italy, and Spain is as follows (in millions) [\\[source\\]](https://en.wikipedia.org/wiki/List_of_countries_and_dependencies_by_population):\n",
+    "\n",
+    "- **Ireland** : 4.9M\n",
+    "- **Italy** : 60.2M\n",
+    "- **Spain** : 47.1M\n",
+    "\n",
+    "If we plot a figure dividing the total number of cases reported dayly by the population (in millions) we can find how many persons are infected per 1 million, which give us a normalized value we could use to understand the severity of the outbreak.\n",
+    "\n",
+    "### The figure below shows that in fact Ireland has more cases per million that the most affected countries in Europe starting on March 16th, 2020."
    ]
   },
   {
@@ -952,6 +973,16 @@
     "    color='independent',\n",
     "    shape='independent'\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Data sournces:\n",
+    "- Government of Ireland [https://www.gov.ie/en/news/7e0924-latest-updates-on-covid-19-coronavirus/]\n",
+    "- 2019 Novel Coronavirus COVID-19 (2019-nCoV) Data Repository by Johns Hopkins CSSE [https://github.com/CSSEGISandData/COVID-19]\n"
    ]
   },
   {
