covid19 dashboard ie no toc

--- a/_notebooks/2020-03-21-covid-19-ie.ipynb
+++ b/_notebooks/2020-03-21-covid-19-ie.ipynb
@@ -7,12 +7,12 @@
     "# Covid-19 in Ireland\n",
     "> Dashboard\n",
     "\n",
-    "- toc: true\n",
+    "- toc: false\n",
     "- branch: master\n",
     "- badges: false\n",
     "- comments: false\n",
     "- author: \"Libre AI\"\n",
-    "- categories: [libreai]"
+    "- categories: [ireland, covid19]"
    ]
   },
   {
