--- a/_posts/2020-03-21-covid-19-ie.md
+++ b/_posts/2020-03-21-covid-19-ie.md
@@ -2,12 +2,12 @@
 keywords: fastai
 description: Dashboard
 title: Covid-19 in Ireland
-toc: true
+toc: false
 branch: master
 badges: false
 comments: false
 author: "Libre AI"
-categories: [libreai]
+categories: [ireland, covid19]
 nb_path: _notebooks/2020-03-21-covid-19-ie.ipynb
 layout: notebook
 ---
