covid19 dashboard ie bold important message

--- a/_notebooks/2020-03-21-covid-19-ie.ipynb
+++ b/_notebooks/2020-03-21-covid-19-ie.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "21  2020-03-22      ie    906       4          5             18"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "16  2020-03-17      ie    292       2          5             13"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,17 +289,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-563a2be0be484a01932997eb6e075d61\"></div>\n",
+       "<div id=\"altair-viz-f40cf0f8a40442c68a3107fe16638f64\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-563a2be0be484a01932997eb6e075d61\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-f40cf0f8a40442c68a3107fe16638f64\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -347,7 +347,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,17 +370,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-3a9cd4c0751546da802661f6f23e85fb\"></div>\n",
+       "<div id=\"altair-viz-2862e2f6a47d435186136b5e99bf001e\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-3a9cd4c0751546da802661f6f23e85fb\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-2862e2f6a47d435186136b5e99bf001e\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -428,7 +428,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,17 +458,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-9d60ca0f0587418e8b3b43638f181362\"></div>\n",
+       "<div id=\"altair-viz-e157642f23634a839a2ad69d924278fc\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-9d60ca0f0587418e8b3b43638f181362\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-e157642f23634a839a2ad69d924278fc\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -516,7 +516,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,22 +551,22 @@
     "\n",
     "For Ireland, the size of the circles for each day denotes the number of new persons confirmed infected that day.\n",
     "\n",
-    "If we consider only the absolute numbers, we can see that the confirmed cases for Covid-19 in Ireland are below the ones observed in Italy and Spain at early stages. However, the populations of the three countries are very different and we have to account for that as well."
+    "**If we consider only the absolute numbers, we can see that the confirmed cases for Covid-19 in Ireland are below the ones observed in Italy and Spain at early stages. However, the populations of the three countries are very different and we have to account for that as well.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-7d8fbb48af3541ceacdc0bbee6f5d590\"></div>\n",
+       "<div id=\"altair-viz-d268954e48444ed0add115ae8945d17c\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-7d8fbb48af3541ceacdc0bbee6f5d590\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-d268954e48444ed0add115ae8945d17c\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -614,7 +614,7 @@
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,17 +648,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-5b9e835191024d0884fc822961808f8d\"></div>\n",
+       "<div id=\"altair-viz-a29c00b534b84ba3b6aa88a05c41f0cd\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-5b9e835191024d0884fc822961808f8d\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-a29c00b534b84ba3b6aa88a05c41f0cd\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -706,7 +706,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,17 +729,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-b963ddd082234ff99500d656ae8a31bd\"></div>\n",
+       "<div id=\"altair-viz-98e867440c9e43f1b377bc0a5c11b39a\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-b963ddd082234ff99500d656ae8a31bd\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-98e867440c9e43f1b377bc0a5c11b39a\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -787,7 +787,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,17 +815,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-b294e3a7957b4b0eba7afc0c9594401c\"></div>\n",
+       "<div id=\"altair-viz-6c9351c930ea455c9dfb8b963b613432\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-b294e3a7957b4b0eba7afc0c9594401c\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-6c9351c930ea455c9dfb8b963b613432\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -873,7 +873,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,17 +901,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-bb9325e07d034ba78ed19c4a2867f5e4\"></div>\n",
+       "<div id=\"altair-viz-787372c23d514e0f9e48146a2265eafb\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-bb9325e07d034ba78ed19c4a2867f5e4\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-787372c23d514e0f9e48146a2265eafb\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -959,7 +959,7 @@
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
