covid19 dashboard ie bold important message

--- a/_posts/2020-03-21-covid-19-ie.md
+++ b/_posts/2020-03-21-covid-19-ie.md
@@ -113,7 +113,7 @@ layout: notebook
 <li><strong>Italy</strong> : 60.2M</li>
 <li><strong>Spain</strong> : 47.1M</li>
 </ul>
-<p>If we plot a figure dividing the total number of cases reported dayly by the population (in millions) we can find how many persons are infected per 1 million, which give us a normalized value we could use to understand the severity of the outbreak.</p>
+<p>If we plot a figure dividing the total number of cases reported daily by the population (in millions) we can find how many persons are infected per 1 million, which give us a normalized value we could use to understand the severity of the outbreak.</p>
 <h3 id="The-figure-below-shows-that-in-fact-Ireland-has-more-cases-per-million-that-the-most-affected-countries-in-Europe-starting-on-March-16th,-2020,-and-growing-quickly.">The figure below shows that in fact Ireland has more cases per million that the most affected countries in Europe starting on March 16th, 2020, and growing quickly.<a class="anchor-link" href="#The-figure-below-shows-that-in-fact-Ireland-has-more-cases-per-million-that-the-most-affected-countries-in-Europe-starting-on-March-16th,-2020,-and-growing-quickly."> </a></h3>
 </div>
 </div>
