--- a/_notebooks/2020-03-21-covid-19-ie.ipynb
+++ b/_notebooks/2020-03-21-covid-19-ie.ipynb
@@ -641,7 +641,7 @@
     "- **Italy** : 60.2M\n",
     "- **Spain** : 47.1M\n",
     "\n",
-    "If we plot a figure dividing the total number of cases reported dayly by the population (in millions) we can find how many persons are infected per 1 million, which give us a normalized value we could use to understand the severity of the outbreak.\n",
+    "If we plot a figure dividing the total number of cases reported daily by the population (in millions) we can find how many persons are infected per 1 million, which give us a normalized value we could use to understand the severity of the outbreak.\n",
     "\n",
     "### The figure below shows that in fact Ireland has more cases per million that the most affected countries in Europe starting on March 16th, 2020, and growing quickly."
    ]
